--- a/condicionais.html
+++ b/condicionais.html
@@ -14,6 +14,7 @@
         <nav id="nav-bar">
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="estruturaC.html">Estrutura em C</a></li>
                 <li><a href="condicionais.html">Estruturas Condicionais</a></li>
                 <li><a href="repeticao.html">Estruturas de Repetição</a></li>
             </ul>
@@ -22,7 +23,7 @@
 
     <main>
         <div class="conteudo-principal">
-            <section id="conteudo-explicacoes">
+            <section class="conteudo-explicacoes">
                 <div class="container-explicacao">
                     <h2>Estruturas Condicionais</h2>
                     <p>
