--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav id="nav-bar">
             <ul>
                 <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="estruturaC.html">Estrutura em C</a></li>
                 <li><a href="condicionais.html">Estruturas Condicionais</a></li>
                 <li><a href="repeticao.html">Estruturas de Repetição</a></li>
             </ul>
