--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="estruturaC.html">Estrutura em C</a></li>
                 <li><a href="condicionais.html">Estruturas Condicionais</a></li>
                 <li><a href="repeticao.html">Estruturas de Repetição</a></li>
+                <li><a href="exercicio.html">Exercício C#</a></li>
             </ul>
         </nav>
     </header>
